deployment/02-vmware-explore-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vmware-explore-demo-app
  labels:
    app: demo-app-ui
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demo-app-ui
    tier: frontend
