deployment/vmworld-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmworld-demo-app
spec:
  rules:
  - host: vmworld-demo.corp.local
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: vmworld-demo-app
            port:
              number: 80
